# tensor-sysy

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci.yml
benchmarks/: run_shapes.py
benchmarks/baseline/: rtx3080_wsl.csv
docs/: architecture.md  demo.md
docs/benchmarks/: baseline.md
docs/blog/: writeup.md
docs/superpowers/plans/: 2026-04-18-tensor-sysy-w10-transformer.md  2026-04-18-tensor-sysy-w11-ci-bench-plan.md  2026-04-18-tensor-sysy-w8-cuda.md  2026-04-18-tensor-sysy-w9-scheduler.md
docs/superpowers/specs/: 2026-04-18-tensor-sysy-w10-transformer-design.md  2026-04-18-tensor-sysy-w11-ci-bench-design.md  2026-04-18-tensor-sysy-w8-cuda-design.md  2026-04-18-tensor-sysy-w9-scheduler-design.md
examples/: bad_add_shape.tsy  bad_builtin_missing_parens.tsy  bad_matmul_mismatch.tsy  bad_rmsnorm_result_shape.tsy  bad_softmax_arity.tsy  bad_syntax.tsy  bad_tensor_missing_dtype.tsy  bad_tensor_missing_shape.tsy  bad_unknown_builtin.tsy  bad_unresolved_dim.tsy  dead_matmul.tsy  matmul.tsy  mlp.tsy  run_add_tiny.tsy  run_matmul_large.tsy  run_matmul_medium.tsy  run_matmul_odd.tsy  run_matmul_tiny.tsy  run_rmsnorm_tiny.tsy  run_softmax_tiny.tsy  smoke.tsy  tensor_all_ops.tsy  transformer_block.tsy
scripts/: bench_compare.py  bench_local.sh  compare_numpy.py  compare_pytorch.py
src/codegen/: cpp.cpp  cpp.h  cuda.cpp  cuda.h
src/frontend/: ast.cpp  ast.h  diagnostics.cpp  diagnostics.h  location.h  parser_driver.cpp  parser_driver.h  sysy.l  sysy.y
src/hir/: const_eval.cpp  const_eval.h  lowering.cpp  lowering.h  ops.cpp  ops.h  printer.cpp  printer.h  types.cpp  types.h  verifier.cpp  verifier.h
src/lir/: interpreter.cpp  interpreter.h  ir.h  lowering.cpp  lowering.h  module_utils.cpp  module_utils.h  printer.cpp  printer.h
src/passes/: const_fold.cpp  dce.cpp  layout_lowering.cpp  pass_manager.cpp  pass_manager.h  schedule_cuda.cpp  verify.cpp
src/runtime/: adapter_cpu.cpp  adapter_cpu.h  adapter_cuda.cu  adapter_cuda.h
src/tools/: tsc.cpp  tsy-bench.cu
tests/: CMakeLists.txt
tests/adapter/: test_adapter_cpu_cases.cpp  test_adapter_cuda_cases.cpp  test_transpose_relu_cases.cpp
tests/e2e/: conftest.py  reference.py  test_transformer_block.py
tests/parse/: test_parse_cases.cpp
tests/passes/: test_pass_cases.cpp  test_schedule_cuda_cases.cpp
tests/run/: test_run_cases.cpp
tests/shape/: test_shape_cases.cpp
